--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<app-header></app-header>
+
+<div class="container py-5">
+    <div class="row justify-content-center py-5">
+        <div class="col-md-6 text-center">
+            <form>
+                <div class="mb-4">
+                    <label for="email" class="form-label fw-bolder">Email:</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
+                </div>
+                <div class="mb-4">
+                    <label for="password" class="form-label fw-bolder">Password:</label>
+                    <div class="input-group mb-3">
+                        <input type="password" id="password" name="password" class="form-control"
+                            aria-describedby="password" required>
+                        <span class="input-group-text border-0 bg-transparent" id="password"><i class="fa fa-eye"
+                                aria-hidden="true"></i></span>
+                    </div>
+                </div>
+
+
+
+                <div class="d-grid mt-5">
+                    <button type="submit" class="btn btn-success">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
