--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="banner">
     <nav class="navbar navbar-expand-lg bg-transparent text-dark">
         <a class="navbar-brand" href="#">
-            <img src="./images/logo.png" alt="" width="50" height="50" class="d-inline-block align-top">
+            <img src="assets/images/FCT-logo.png" alt="" width="50" height="50" class="d-inline-block align-top">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,18 +20,17 @@
                     <a class="nav-link text-light" href="#">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Contact</a>
+                    <a class="nav-link text-light" routerLink="/AdminDashboard">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn btn-light" href="#">Register Schools</a>
+                    <a class="nav-link btn btn-light" routerLink="/login" target="_blank">Login</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="banner-content">
         <p>Welcome To</p>
-        <h1>CATHOLIC DIOCESE OF UMUAHIA EDUCATION OFFICE
-        </h1>
+        <h1>FCT DQA</h1>
         <p>DIOCESAN EDUCATION OFFICE</p>
         <a href="#" class="btn btn-secondary">Apply To Teach</a>
     </div>
@@ -71,96 +70,95 @@
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container-fluid d-flex flex-md-row flex-column m-0 p-0">
-        <div class="w-100">
-            <img src="/assets/images/news.png" alt="" class="img-fluid" width="100%" />
-        </div>
-        <div class="w-100 contentColumn px-5 bg-success">
-            <h4 class="text-center mt-3">Latest News</h4>
-            <h5 class="text-center">Trending news Headline</h5>
-            <p class="">
-                UMUAHIA CATHOLIC DIOCESAN EDUCATION SECRETARIAT has embraced digital transformation to enhance education
-                service
-                delivery in all her member schools and to have a supervisory interface at the secretariat level for
-                effective
-                monitoring and evaluation.
-            </p>
-            <p>I hereby direct 100% compliance of every primary and secondary school under the supervision of the
-                secretariat,
-                it is therefore important for every school to ensure compliance inline with the digital transformation
-                agenda
-                of
-                Aba education secretariat to enable uniform technology experience across all member schools.</p>
-            <div class="text-center">
-                <a href="#" class="btn btn-primary btn-news shadow">KEEP READING</a>
-            </div>
-            <div class="d-flex flex-row mt-5 justify-content-center">
-                <div class="p-1 mr-1" style="background-color: #024126; box-shadow: 0px 2px 4px rgba(2, 65, 38, 0.5);">
-                </div>
-                <div class="p-1 mr-1" style="background-color: #024126; box-shadow: 0px 2px 4px rgba(2, 65, 38, 0.5);">
-                </div>
-                <div class="p-1" style="background-color: #024126; box-shadow: 0px 2px 4px rgba(2, 65, 38, 0.5);"></div>
-            </div>
-
-        </div>
+<div class="container-fluid d-flex flex-md-row flex-column m-0 p-0">
+    <div class="w-100">
+        <img src="/assets/images/news.png" alt="" class="img-fluid" width="100%" />
     </div>
-
-    <div class="container-fluid p-5 newsletter">
-        <div class="row">
-            <div class="col-sm">
-                <h4>E-News Letter</h4>
-                <p>Subscribe to our newsletter to get the latest information right in your mail.</p>
-            </div>
-            <div class="col-sm mt-lg-5">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter your Email" aria-label="Enter your Email"
-                        aria-describedby="button-addon2">
-                    <div class="input-group-append">
-                        <a href="#" class="btn btn-outline-secondary btnAddon" type="button"
-                            id="button-addon2">Subscribe</a>
-                    </div>
-                </div>
-            </div>
+    <div class="w-100 contentColumn px-5 bg-success">
+        <h4 class="text-center mt-3">Latest News</h4>
+        <h5 class="text-center">Trending news Headline</h5>
+        <p class="">
+            UMUAHIA CATHOLIC DIOCESAN EDUCATION SECRETARIAT has embraced digital transformation to enhance education
+            service
+            delivery in all her member schools and to have a supervisory interface at the secretariat level for
+            effective
+            monitoring and evaluation.
+        </p>
+        <p>I hereby direct 100% compliance of every primary and secondary school under the supervision of the
+            secretariat,
+            it is therefore important for every school to ensure compliance inline with the digital transformation
+            agenda
+            of
+            Aba education secretariat to enable uniform technology experience across all member schools.</p>
+        <div class="text-center">
+            <a href="#" class="btn btn-primary btn-news shadow">KEEP READING</a>
         </div>
+        <div class="d-flex flex-row mt-5 justify-content-center">
+            <div class="p-1 mr-1" style="background-color: #024126; box-shadow: 0px 2px 4px rgba(2, 65, 38, 0.5);">
+            </div>
+            <div class="p-1 mr-1" style="background-color: #024126; box-shadow: 0px 2px 4px rgba(2, 65, 38, 0.5);">
+            </div>
+            <div class="p-1" style="background-color: #024126; box-shadow: 0px 2px 4px rgba(2, 65, 38, 0.5);"></div>
+        </div>
+
     </div>
+</div>
 
-    <div class="container-fluid footer justify-content-center">
-        <div class="row">
-            <div class="col-sm">
-                <img src="./images/logo.png" alt="" class="img-thumbnail">
-                <h3>Follow Us</h3>
-                <div class="d-flex flex-row mt-3 mb-5">
-                    <i class="fa fa-instagram" aria-hidden="true"></i>
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
-                    <i class="fa fa-twitter" aria-hidden="true"></i>
-                    <i class="fa fa-youtube-play mb-sm-3" aria-hidden="true"></i>
-
+<div class="container-fluid p-5 newsletter">
+    <div class="row">
+        <div class="col-sm">
+            <h4>E-News Letter</h4>
+            <p>Subscribe to our newsletter to get the latest information right in your mail.</p>
+        </div>
+        <div class="col-sm mt-lg-5">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control" placeholder="Enter your Email" aria-label="Enter your Email"
+                    aria-describedby="button-addon2">
+                <div class="input-group-append">
+                    <a href="#" class="btn btn-outline-secondary btnAddon" type="button"
+                        id="button-addon2">Subscribe</a>
                 </div>
-            </div>
-            <div class="col-sm">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </div>
-            <div class="col-sm">
-                <p>Terms and conditions apply. We never send out unsolicited emails. You can unsubscribe at any time. To
-                    help
-                    us improve the emails we send you we collect information such as when they are opened and what you
-                    clicked
-                    on. For more information on how we use your personal details please refer to our Privacy Policy and
-                    Cookie
-                    Terms and conditions.</p>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container-fluid text-center footer2">
-        <p> &#169; Stable Shield Solutions</p>
+<div class="container-fluid footer justify-content-center">
+    <div class="row">
+        <div class="col-sm">
+            <img src="assets/images/FCT-logo.png" alt="" class="img-thumbnail">
+            <h3>Follow Us</h3>
+            <div class="d-flex flex-row mt-3 mb-5">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-youtube-play mb-sm-3" aria-hidden="true"></i>
+
+            </div>
+        </div>
+        <div class="col-sm">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="col-sm">
+            <p>Terms and conditions apply. We never send out unsolicited emails. You can unsubscribe at any time. To
+                help
+                us improve the emails we send you we collect information such as when they are opened and what you
+                clicked
+                on. For more information on how we use your personal details please refer to our Privacy Policy and
+                Cookie
+                Terms and conditions.</p>
+        </div>
     </div>
+</div>
 
+<div class="container-fluid text-center footer2">
+    <p> &#169; Stable Shield Solutions</p>
 </div>
